...
            android:layout_height="32dp"
            app:srcCompat="@drawable/ic_map"
            android:layout_weight="1"
            android:visibility="@string/show_map_icon_on_top_icons"/>

        <ImageView
            android:id="@+id/ivNetwork"
            android:onClick="onClickNetworkIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/ic_net_local"
            android:layout_weight="1"/>

...
            android:name="com.rallytac.engageandroid.SmallCardFragmentForTextMessaging"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="4" />

        <ImageView
            android:id="@+id/ivPtt"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
...
